[package]
name = "pmortem"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crash-context = "0.6.3"
minidump-writer = "0.10.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.167"
mach2 = "0.4.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Kernel",
] }

[profile.release]
panic = "abort"
lto = true
strip = true
